[package]
name = "atomic-bomb-engine-py"
version = "0.3.7"
edition = "2021"

[lib]
name = "atomic_bomb_engine"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-bomb-engine = "0.3.10"
tokio = "1.36.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde-pyobject = "0.2.1"

[build]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]

[tool.maturin]
name = "atomic_bomb_engine"
scripts = "python/atomic_bomb_engine"
