[package]
name = "atomic-bomb-engine-py"
version = "0.39.0-rc.1"
edition = "2021"

[lib]
name = "atomic_bomb_engine"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-bomb-engine = "0.39.0-rc.1"
# atomic-bomb-engine = { git = "https://github.com/we-lsp/atomic-bomb-engine.git", branch = "result-chan"}
tokio = "1.36.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime", "async-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde-pyobject = "0.2.1"
async-std = "1.12.0"
async-stream = "0.3.5"
futures = "0.3.30"
tokio-stream = "0.1.15"
anyhow = "1.0.83"

[build]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module", "auto-initialize"]

[tool.maturin]
name = "atomic_bomb_engine"
scripts = "python/atomic_bomb_engine"
